--- a/Research.html
+++ b/Research.html
@@ -10,7 +10,8 @@
         <body>
 
             <div class="main">
-                <div class = "side-menu">
+                
+                <!-- <div class = "side-menu">
                     
                     <center> 
                         <img src="imgs/tonian.jpg">
@@ -22,7 +23,7 @@
                     <a href = "#">Outreach</a>
                     <a href = "#">Resume/CV</a>
                     <a href = "#">Other Works</a>
-                </div>
+                </div> -->
 
                 <div class = "body">
                     <h1> Ph.D. Research Pojects</h1>
